--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CommunityEats">
         <activity
-            android:name=".RegisterActivity"
-            android:label="@string/app_name" >
+            android:name=".MainActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".LoginActivity"
+            android:label="Preferences">
+        </activity>
+        <activity android:name=".RegisterActivity"
+            android:label="Preferences">
         </activity>
     </application>
 
