--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CommunityEats">
         <activity
+            android:name=".ProfileActivity"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
             <intent-filter>
@@ -18,12 +21,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity"
-            android:label="Preferences">
-        </activity>
-        <activity android:name=".RegisterActivity"
-            android:label="Preferences">
-        </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:label="Preferences"></activity>
+        <activity
+            android:name=".RegisterActivity"
+            android:label="Preferences"></activity>
     </application>
 
 </manifest>
