--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.CommunityEats">
         <activity
             android:name=".ProfileActivity"
@@ -26,6 +27,8 @@
             android:label="Preferences"></activity>
         <activity
             android:name=".RegisterActivity"
+            android:label="Preferences"></activity>
+        <activity android:name="FoodDonationActivity"
             android:label="Preferences"></activity>
     </application>
 
