Added Navigation Bar functionality and home screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
             android:label="Preferences"></activity>
         <activity android:name="FoodDonationActivity"
             android:label="Preferences"></activity>
+        <activity android:name=".HomeScreenActivity"
+            android:label="Preferences"></activity>
+        <activity android:name=".HomeActivity"
+            android:label="Preferences"></activity>
     </application>
 
 </manifest>
