--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,32 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.CommunityEats">
         <activity
-            android:name=".RegisterActivity"
-            android:label="@string/app_name" >
+            android:name=".ProfileActivity"
+            android:exported="true" />
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:label="Preferences"></activity>
+        <activity
+            android:name=".RegisterActivity"
+            android:label="Preferences"></activity>
+        <activity android:name="FoodDonationActivity"
+            android:label="Preferences"></activity>
+        <activity android:name=".HomeScreenActivity"
+            android:label="Preferences"></activity>
+        <activity android:name=".HomeActivity"
+            android:label="Preferences"></activity>
     </application>
 
 </manifest>
