--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,10 @@
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.CommunityEats">
         <activity
-            android:name=".activities.ProfileActivity"
+            android:name=".ProfileActivity"
             android:exported="true" />
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,16 +23,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.LoginActivity"
+            android:name=".LoginActivity"
             android:label="Preferences"></activity>
         <activity
-            android:name=".activities.RegisterActivity"
+            android:name=".RegisterActivity"
             android:label="Preferences"></activity>
-        <activity android:name=".activities.FoodDonationActivity"
+        <activity android:name="FoodDonationActivity"
             android:label="Preferences"></activity>
-        <activity android:name=".activities.HomeScreenActivity"
+        <activity android:name=".HomeScreenActivity"
             android:label="Preferences"></activity>
-        <activity android:name=".activities.HomeActivity"
+        <activity android:name=".HomeActivity"
             android:label="Preferences"></activity>
     </application>
 
