--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.CommunityEats">
         <activity
-            android:name=".activities.UserProfileActivity"
+            android:name=".activities.ViewUserProfileActivity"
             android:exported="true" />
         <activity
             android:name=".activities.MainActivity"
