--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.CommunityEats">
+        android:theme="@style/Theme.CommunityEats"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".activities.UpdateProfileActivity"
+            android:exported="true" />
         <activity
             android:name=".activities.ViewUserProfileActivity"
             android:exported="true" />
@@ -24,16 +27,19 @@
         </activity>
         <activity
             android:name=".activities.LoginActivity"
-            android:label="Preferences"></activity>
+            android:label="Preferences" />
         <activity
             android:name=".activities.RegisterActivity"
-            android:label="Preferences"></activity>
-        <activity android:name=".activities.FoodDonationActivity"
-            android:label="Preferences"></activity>
-        <activity android:name=".activities.HomeScreenActivity"
-            android:label="Preferences"></activity>
-        <activity android:name=".activities.HomeActivity"
-            android:label="Preferences"></activity>
+            android:label="Preferences" />
+        <activity
+            android:name=".activities.FoodDonationActivity"
+            android:label="Preferences" />
+        <activity
+            android:name=".activities.HomeScreenActivity"
+            android:label="Preferences" />
+        <activity
+            android:name=".activities.HomeActivity"
+            android:label="Preferences" />
     </application>
 
 </manifest>
