--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.CommunityEats">
+        android:theme="@style/Theme.CommunityEats"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".ProfileActivity"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,17 +22,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".LoginActivity"
-            android:label="Preferences"></activity>
+<!--        <activity-->
+<!--            android:name=".LoginActivity"-->
+<!--            android:label="Preferences"></activity>-->
         <activity
             android:name=".RegisterActivity"
             android:label="Preferences"></activity>
-        <activity android:name="FoodDonationActivity"
+        <activity
+            android:name="FoodDonationActivity"
             android:label="Preferences"></activity>
-        <activity android:name=".HomeScreenActivity"
+        <activity
+            android:name=".HomeScreenActivity"
             android:label="Preferences"></activity>
-        <activity android:name=".HomeActivity"
+        <activity
+            android:name=".HomeActivity"
             android:label="Preferences"></activity>
     </application>
 
