--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CommunityEats"
         android:usesCleartextTraffic="true">
+
         <activity
             android:name=".activities.UpdateProfileActivity"
             android:exported="true" />
         <activity
-            android:name=".LoginActivity"
+
+            android:name=".activities.LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,21 +24,25 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<!--        <activity-->
-<!--            android:name=".LoginActivity"-->
-<!--            android:label="Preferences"></activity>-->
+        <!--        <activity-->
+        <!--            android:name=".LoginActivity"-->
+        <!--            android:label="Preferences"></activity>-->
         <activity
-            android:name=".RegisterActivity"
+            android:name=".activities.ViewUserProfileActivity"
             android:label="Preferences"></activity>
         <activity
-            android:name="FoodDonationActivity"
+            android:name=".activities.RegisterActivity"
             android:label="Preferences"></activity>
         <activity
-            android:name=".HomeScreenActivity"
+            android:name=".activities.FoodDonationActivity"
             android:label="Preferences"></activity>
         <activity
-            android:name=".HomeActivity"
+            android:name=".activities.HomeScreenActivity"
             android:label="Preferences"></activity>
+        <activity
+            android:name=".activities.HomeActivity"
+            android:label="Preferences"></activity>
+
     </application>
 
 </manifest>
