--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,9 @@
         <activity
             android:name=".activities.HomeActivity"
             android:label="Preferences"></activity>
+        <activity
+            android:name=".activities.ViewFoodDonation"
+            android:label="Preferences"></activity>
 
     </application>
 
