Fixed the crash
Fixed crash

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
         <activity
             android:name=".activities.HomeActivity"
             android:label="Preferences" />
+        <activity
+            android:name=".activities.ViewFoodDonation"
+            android:label="Preferences" />
     </application>
 
 </manifest>
