--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,11 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha03'
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    androidTestImplementation 'androidx.test:rules:1.4.0-alpha05'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.0-alpha03'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
