--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,12 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-web:3.4.0'
     androidTestImplementation 'androidx.test.espresso.idling:idling-concurrent:3.4.0'
 
+
+
+    implementation 'androidx.appcompat:appcompat:1.3.0-beta01'
+
+
+    implementation 'androidx.cardview:cardview:1.0.0'
     // The following Espresso dependency can be either "implementation"
     // or "androidTestImplementation", depending on whether you want the
     // dependency to appear on your APK's compile classpath or the test APK
