--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 }
 
@@ -78,7 +78,6 @@ dependencies {
 
 
     implementation 'androidx.appcompat:appcompat:1.3.0-beta01'
-
 
     implementation 'androidx.cardview:cardview:1.0.0'
     // The following Espresso dependency can be either "implementation"
